--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "keywords": ["bot", "heroku", "music-playback", "discord", "javascript", "node", "youtube"],
   "env": {
     "MY_VAR_DISCORD": {
-      "description": "Discord token used to log in",
+      "MzkxNTE1ODI5NDQ0OTM1Njgx.DRZ3WA.Ohdi5KGzEPPu9sqlKXm_QRHEams",
       "required": true
     },
     "MY_VAR_OPENWEATHERMAP": {
